--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <style>
     html,
     body {
-      overflow-x: hidden;
+      overflow-x: clip;
       width: 100%;
       margin: 0;
       padding: 0;
@@ -253,7 +253,6 @@
     "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime?deps=react@18.3.1",
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client?deps=react@18.3.1",
     "react-dom": "https://esm.sh/react-dom@18.3.1?deps=react@18.3.1",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.0/+esm",
     "html-to-image": "https://esm.sh/html-to-image@1.11.11",
     "react-easy-crop": "https://esm.sh/react-easy-crop@5.0.0?deps=react@18.3.1,react-dom@18.3.1",
